<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color2"
    tools:context=".screens.splash.SplashFragment"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/splashImage"
        app:lottie_rawRes="@raw/anim_flying_wallet_money"
        android:layout_width="@dimen/image_size_150"
        android:layout_height="@dimen/image_size_150"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginBottom="@dimen/space_16"
        android:contentDescription="@string/content_description_splash_image" />

    <TextView
        android:id="@+id/splashTitle"
        android:text="@string/splash_title"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_27"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_description_splash_text"
/>
</androidx.appcompat.widget.LinearLayoutCompat>