<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.onboarding.OnBoardingFragment1">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageViewImage"
        app:lottie_rawRes="@raw/shopping_list"
        android:layout_width="@dimen/image_size_220"
        android:layout_height="@dimen/image_size_220"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/content_description_onboarding1_image"/>

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/on_boarding1_title"
        android:textSize="@dimen/text_size_20"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/space_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageViewImage"
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewDescription"
        android:text="@string/on_boarding1_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_18"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FABSkip"
        android:text="@string/button_skip"
        app:cornerRadius="@dimen/space_25"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginEnd="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>