<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".screens.onboarding.OnBoardingFragment3">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageViewImage"
        android:layout_width="@dimen/detail_image_size_140"
        android:layout_height="@dimen/detail_image_size_140"
        android:contentDescription="@string/content_description_onboarding3_image"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/editor2_dolar_euro" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_200"
        android:text="@string/on_boarding3_title"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_bottom_30"
        android:layout_marginTop="@dimen/margin_top_30"
        android:text="@string/on_boarding3_subtitle"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/imageViewImage"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:hint="@string/on_boarding3_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusTopStart="@dimen/space_32"
        app:boxCornerRadiusTopEnd="@dimen/space_32"
        app:boxCornerRadiusBottomStart="@dimen/space_32"
        app:boxCornerRadiusBottomEnd="@dimen/space_32"
        app:layout_constraintTop_toBottomOf="@id/imageViewImage"
        app:layout_constraintBottom_toTopOf="@id/FABStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/FABStart"
        android:text="@string/start"
        app:cornerRadius="@dimen/space_25"
        android:layout_marginTop="@dimen/space_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>